# walletconnect-sdk-rs

./: Cargo.toml  README.md  rustfmt.toml
examples/: connect-auth.rs  connect-settle.rs  connect.rs
src/: cacao.rs  connection.rs  constants.rs  error.rs  lib.rs  message.rs  message_types.rs  pairing.rs  paring.rs  relay_auth.rs  rpc_types.rs  types.rs  utils.rs  wallet_kit.rs  wc_message.rs
